Name:          network-transport-inmemory
Version:       0.5.0
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3
License-file:  LICENSE
Copyright:     Well-Typed LLP, Tweag I/O Limited
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    edsko@well-typed.com, duncan@well-typed.com, watson.timothy@gmail.com
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://github.com/haskell-distributed/network-transport-inmemory/issues
Synopsis:      In-memory instantiation of Network.Transport
Description:   Network transport inmemory is a transport that could be used for local
               communication in the same address space (i.e. one process). N-t-inmemory
               is based on STM primitives. Such transport could be used either for
               debug test purposes, or for local communication that require full
               network-transport semantics.

               NB: network-tranpsport-inmemory does not support cross transport
               communication, all endpoints that want to comminicate should be
               created using same transport.

Tested-With:   GHC==7.4.1 GHC==7.4.2 GHC==7.8.3 GHC==7.10
Category:      Network
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/network-transport-inmemory

Library
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport >= 0.4.0.0 && < 0.5,
                   data-accessor >= 0.2 && < 0.3,
                   bytestring >= 0.9 && < 0.11,
                   containers >= 0.4 && < 0.6,
                   stm >= 2.0 && < 3.0
  Exposed-modules: Network.Transport.InMemory
  ghc-options:     -Wall
  HS-Source-Dirs:  src

Test-Suite TestMulticastInMemory
  Type:            exitcode-stdio-1.0
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport-inmemory,
                   network-transport,
                   network-transport-tests >= 0.1 && < 0.3
  Main-Is:         TestMulticastInMemory.hs
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  tests
  Buildable:       False

Test-Suite TestInMemory
  Type:            exitcode-stdio-1.0
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport-inmemory,
                   network-transport-tests >= 0.1 && < 0.3,
                   network-transport
  Main-Is:         TestInMemory.hs
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  tests
