Name:          network-transport-tcp
Version:       0.4.0
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3 
License-file:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    edsko@well-typed.com, duncan@well-typed.com, watson.timothy@gmail.com
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://cloud-haskell.atlassian.net/browse/NTTCP
Synopsis:      TCP instantiation of Network.Transport
Description:   TCP instantiation of Network.Transport  
Tested-With:   GHC==7.0.4 GHC==7.2.2 GHC==7.4.1 GHC==7.4.2
Category:      Network
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/network-transport-tcp

Flag use-mock-network
  Description:     Use mock network implementation (for testing)
  Default:         False

Library
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport >= 0.4.0.0 && < 0.5,
                   data-accessor >= 0.2 && < 0.3,
                   containers >= 0.4 && < 0.6,
                   bytestring >= 0.9 && < 0.11,
                   network >= 2.3 && < 2.5
  Exposed-modules: Network.Transport.TCP,
                   Network.Transport.TCP.Internal
  Extensions:      CPP
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src
  If flag(use-mock-network)
    CPP-Options:     -DUSE_MOCK_NETWORK
    Exposed-modules: Network.Transport.TCP.Mock.Socket
                     Network.Transport.TCP.Mock.Socket.ByteString

Test-Suite TestTCP 
  Type:            exitcode-stdio-1.0
  Main-Is:         TestTCP.hs
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport-tests >= 0.1.0.1 && < 0.2,
                   network >= 2.3 && < 2.5,
                   network-transport >= 0.4.0.0 && < 0.5,
                   network-transport-tcp >= 0.3 && < 0.5
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  HS-Source-Dirs:  tests
  Extensions:      CPP,
                   OverloadedStrings
  If flag(use-mock-network)
    CPP-Options:   -DUSE_MOCK_NETWORK

Test-Suite TestQC
  Type:           exitcode-stdio-1.0
  Main-Is:        TestQC.hs
  If flag(use-mock-network)
    Build-Depends:  base >= 4.3 && < 5,
                    test-framework,
                    test-framework-quickcheck2,
                    test-framework-hunit,
                    QuickCheck,
                    HUnit,
                    network-transport,
                    network-transport-tcp,
                    containers,
                    bytestring,
                    pretty,
                    data-accessor,
                    data-accessor-transformers,
                    mtl,
                    transformers,
                    lockfree-queue
  Else
    Buildable: False
  ghc-options:    -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs: tests
  Extensions:     TypeSynonymInstances
                  FlexibleInstances
                  OverlappingInstances
                  OverloadedStrings
                  DeriveDataTypeable
                  MultiParamTypeClasses
