name:                network-transport-tests
version:             0.1.0.1
synopsis:            Unit tests for Network.Transport implementations
-- description:         
homepage:            http://github.com/haskell-distributed/distributed-process
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Well-Typed LLP
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Network.Transport.Tests,
                       Network.Transport.Tests.Multicast,
                       Network.Transport.Tests.Auxiliary,
                       Network.Transport.Tests.Traced
  -- other-modules:       
  build-depends:       base >= 4.5 && < 4.7,
                       network-transport >= 0.3 && < 0.4,
                       containers >= 0.4 && < 0.6,
                       bytestring >= 0.9 && < 0.11,
                       random >= 1.0 && < 1.1,
                       mtl >= 2.1 && < 2.2,
                       ansi-terminal >= 0.5 && < 0.6
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  extensions:          CPP,
                       ExistentialQuantification,
                       FlexibleInstances,
                       DeriveDataTypeable,
                       RankNTypes,
                       OverloadedStrings,
                       OverlappingInstances
