name:                network-transport-tests
version:             0.2.4.3
synopsis:            Unit tests for Network.Transport implementations
-- description:
homepage:            http://haskell-distributed.github.com
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          Facundo Domínguez <facundo.dominguez@tweag.io>
copyright:           Well-Typed LLP
category:            Network
build-type:          Simple
cabal-version:       >=1.8

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/network-transport-tests

library
  exposed-modules:     Network.Transport.Tests,
                       Network.Transport.Tests.Multicast,
                       Network.Transport.Tests.Auxiliary,
                       Network.Transport.Tests.Traced
  -- other-modules:
  build-depends:       base >= 4.5 && < 5,
                       network-transport >= 0.4.1.0 && < 0.6,
                       containers >= 0.4 && < 0.7,
                       bytestring >= 0.9 && < 0.11,
                       random >= 1.0 && < 1.2,
                       mtl >= 2.1 && < 2.3,
                       ansi-terminal >= 0.5
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  extensions:          CPP,
                       ExistentialQuantification,
                       FlexibleInstances,
                       DeriveDataTypeable,
                       RankNTypes,
                       OverloadedStrings,
                       OverlappingInstances
