Name:                network-transport
Version:             0.0.1
Description:         Network transport interface
License:             BSD3
License-file:        LICENSE
Author:              Duncan Coutts, Nicolas Wu
Maintainer:          duncan@well-typed.com
Homepage:            http://github.com/haskell-distributed/
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 3 && < 5,
                     bytestring >= 0.9,
                     containers >= 0.4,
                     network >= 2.3,
                     safe >= 0.3,
                     unix >= 2.5.0.0, random, cereal
--                     , unix-bytestring
  Exposed-modules:   Network.Transport,
                     Network.Transport.MVar,
                     Network.Transport.TCP,
                     Network.Transport.Pipes
  Extensions:        BangPatterns
  ghc-options:       -Wall
  HS-Source-Dirs:    src
