Name:          network-transport
Version:       0.1.0
Description:   Network Transport 
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    dcoutts@well-typed.com
License:       BSD3 
License-file:  LICENSE
Synopsis:      Network abstraction layer 
Category:      Network  
Homepage:      http://github.com/haskell-distributed
Build-Type:    Simple
Cabal-Version: >=1.9.2

Library
  Build-Depends:   base >= 4 && < 5,
                   bytestring,
                   containers,
                   data-accessor,
                   network,
                   mtl,
                   transformers
  Exposed-modules: Network.Transport,
                   Network.Transport.Chan,
                   Network.Transport.TCP,
                   Network.Transport.Util
  extensions:      OverloadedStrings, ForeignFunctionInterface, DeriveDataTypeable, RankNTypes, ScopedTypeVariables
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src

Test-Suite TestTCP 
  Type:           exitcode-stdio-1.0
  Main-Is:        TestTCP.hs
  Build-Depends:  base >= 4,
                  bytestring,
                  containers,
                  data-accessor,
                  network,
                  mtl,
                  transformers,
                  ansi-terminal,
                  random
  extensions:     OverloadedStrings, ForeignFunctionInterface, DeriveDataTypeable, RankNTypes, ScopedTypeVariables, ExistentialQuantification, FlexibleInstances, OverlappingInstances
  ghc-options:    -Wall -fno-warn-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
  HS-Source-Dirs: tests src

Test-Suite TestMulticastInMemory 
  Type:           exitcode-stdio-1.0
  Main-Is:        TestMulticastInMemory.hs
  Build-Depends:  base >= 4,
                  bytestring,
                  containers,
                  data-accessor,
                  mtl,
                  transformers,
                  ansi-terminal,
                  random
  extensions:     OverloadedStrings, ForeignFunctionInterface, DeriveDataTypeable, RankNTypes, ScopedTypeVariables, ExistentialQuantification, FlexibleInstances, OverlappingInstances
  ghc-options:    -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs: tests src

Test-Suite TestInMemory 
  Type:           exitcode-stdio-1.0
  Main-Is:        TestInMemory.hs
  Build-Depends:  base >= 4,
                  bytestring,
                  containers,
                  data-accessor,
                  mtl,
                  transformers,
                  ansi-terminal,
                  random
  extensions:     OverloadedStrings, ForeignFunctionInterface, DeriveDataTypeable, RankNTypes, ScopedTypeVariables, ExistentialQuantification, FlexibleInstances, OverlappingInstances
  ghc-options:    -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs: tests src
