Name:                rank1dynamic
Version:             0.4.0
Synopsis:            Like Data.Dynamic/Data.Typeable but with support for rank-1 polymorphic types
Description:         "Data.Typeable" and "Data.Dynamic" only support monomorphic types.
                     In this package we provide similar functionality but with
                     support for rank-1 polymorphic types.
Homepage:            http://haskell-distributed.github.com
License:             BSD3
License-File:        LICENSE
Author:              Edsko de Vries
Maintainer:          Facundo Domínguez <facundo.dominguez@tweag.io>
Bug-Reports:         https://github.com/haskell-distributed/rank1dynamic/issues
Copyright:           Well-Typed LLP, Tweag I/O Limited
Category:            Data
Build-Type:          Simple
Cabal-Version:       >=1.8
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/rank1dynamic

Library
  Exposed-Modules:     Data.Rank1Dynamic,
                       Data.Rank1Typeable
  Build-Depends:       base >= 4.6 && < 5,
                       binary >= 0.5 && < 0.9
  HS-Source-Dirs:      src
  GHC-Options:         -Wall
  Extensions:          EmptyDataDecls,
                       DeriveDataTypeable,
                       ViewPatterns

Test-Suite TestRank1Dynamic
  Type:              exitcode-stdio-1.0
  Main-Is:           test.hs
  Build-Depends:     base >= 4.6 && < 5,
                     HUnit >= 1.2 && < 1.7,
                     rank1dynamic,
                     test-framework >= 0.6 && < 0.9,
                     test-framework-hunit >= 0.2.0 && < 0.4
  ghc-options:       -Wall
  HS-Source-Dirs:    tests
