Name:          distributed-process-azure
Version:       0.1.0
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3 
License-File:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    edsko@well-typed.com, dcoutts@well-typed.com
Stability:     experimental
Homepage:      http://github.com/haskell-distributed/distributed-process
Bug-Reports:   mailto:edsko@well-typed.com
Synopsis:      Microsoft Azure backend for Cloud Haskell 
Category:      Control 

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/distributed-process
  SubDir:   distributed-process-azure

Library
  Build-Depends:     base >= 4.4 && < 5,
                     azure-service-api >= 0.1 && < 0.2,
                     filepath >= 1.3 && < 1.4,
                     executable-path >= 0.0.3 && < 0.1
  Exposed-modules:   Control.Distributed.Process.Backend.Azure
  ghc-options:       -Wall
  HS-Source-Dirs:    src

Executable cloud-haskell-azure
  Main-Is:           src/Control/Distributed/Process/Backend/Azure/CommandLine.hs
  Build-Depends:     base >= 4.4 && < 5,
                     utf8-string >= 0.3 && < 0.4,
                     libssh2 >= 0.2 && < 0.3,
                     filepath >= 1.3 && < 1.4,
                     distributed-process-azure >= 0.1 && < 0.2
